force-app/main/default/objects/PWChrono_Settlement_Payable__c/PWChrono_Settlement_Payable__c.object-meta.xml
<CustomObject>
    <label>Settlement Payable</label>
    <pluralLabel>Settlement Payables</pluralLabel>
    <nameField>
        <label>Payable Item</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>