force-app/main/default/objects/PWChrono_Settlement_Payable__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Text</type>
    <length>255</length>
</CustomField>