force-app/main/default/objects/PWChrono_Settlement_Payable__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <label>Settlement</label>
    <referenceTo>PWChrono_Full_Final_Settlement__c</referenceTo>
    <relationshipName>Settlement_Payables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>